// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle label prop 1`] = `
<scale-card label="card label">
  <mock:shadow-root>
    <div part="border">
      <div aria-label="card label" part="base" role="group" target="_self">
        <div part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle rel prop 1`] = `
<scale-card rel="card rel">
  <mock:shadow-root>
    <div part="border">
      <div part="base" rel="card rel" role="group" target="_self">
        <div part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle target prop 1`] = `
<scale-card target="card target">
  <mock:shadow-root>
    <div part="border">
      <div part="base" role="group" target="card target">
        <div part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should handle to prop 1`] = `
<scale-card to="adresse">
  <mock:shadow-root>
    <div part="border">
      <a href="adresse" part="base interactive" target="_self">
        <div part="body">
          <slot></slot>
        </div>
      </a>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;

exports[`Card should match snapshot 1`] = `
<scale-card>
  <mock:shadow-root>
    <div part="border">
      <div part="base" role="group" target="_self">
        <div part="body">
          <slot></slot>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-card>
`;
